--- a/joinsupport/main.css
+++ b/joinsupport/main.css
@@ -58,8 +58,8 @@ form {
   border: 1px solid #333;
   display: inline-block;
   margin: 50px 0 0 0 ;
-  border-radius: 1.1em;
-  padding: 0.1em 0.15em;
+  border-radius: 1.3em;
+  padding: 0.1em 0.2em;
 }
 .single > input {
   display: inline-block;
@@ -67,7 +67,7 @@ form {
   font-size: 1em;
   height: 100%;
   padding: 0;
-  padding: 5px 20px;
+  padding: 0.2em 1em;
   margin: 0;
   border: none;
   background: none;
@@ -130,12 +130,13 @@ footer { padding: 50px 0; }
 .iphone img { }
 
 .faq dt { font-weight: bold; padding-top: 1em; }
-.faq dd { padding-top: 0.25em; }
+.faq dd { padding-top: 0.25em; margin: 0; }
 
 @media(max-width: 350px) {
   .iphone img { width: 80%; } 
   .single input { width: 100%; }
   .single input.inset, .single button {
+    left: 0px;
     width: 100%;
   }
 }
@@ -143,20 +144,32 @@ footer { padding: 50px 0; }
 .grid ul { 
   list-style-type: none;
   padding-left: 0;
-  padding: 0 40px;
+  padding: 0;
 }
 
 .grid ul li {
-  width: 40%;
   height: 20%;
   display: inline-block;
   max-width: 150px;
-  margin: 20px 40px;
+  margin: 20px 20px;
+  overflow: 
 }
 .grid ul li img {
   width: 100%;
   border: 2px solid #ff5533;
   border-radius: 50%;
+}
+
+@media(max-width: 400px) {
+  form { padding: 0 20%; }
+  form div { padding: 0; margin: 0; }
+  form div input { margin-left: 0; }
+  form div input.text { padding: 0.2em 0; }
+  aside { min-height: 200px; }
+  .single { display: block; padding: 0.2em; }
+  .single input { text-align: center;}
+  .single input.text { width: 100%; }
+  .single input.inset { display: block; width: 100%; border-radius: 0 0 1em 1em;}
 }
 
 @media(max-width: 1200px) {
