--- a/joinsupport/main.css
+++ b/joinsupport/main.css
@@ -1,3 +1,13 @@
+i.fa, main h1, main h2 { color: #ff5533; }
+
+.single input.inset, .single button {
+  color: #333;
+  background: #ff5533;
+}
+
+.place h2, main, main a { color: #ddd; }
+main { background: #222; }
+
 body { 
   font-family:  "Raleway", "open-sans", sans-serif;
   min-width: 200px;
@@ -19,10 +29,7 @@ main {
   width: 50%;
   right: 0;
   position: absolute;
-  background: black;
   z-index: 50;
-  color: #000;
-  background: #ff5533;
 }
 
 a {
@@ -35,7 +42,7 @@ main > section {
 }
 
 main > section:nth-child(even) {
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.05);
 }
 
 .logo {
@@ -76,8 +83,6 @@ form {
   width: auto;
 }
 .single input.inset, .single button {
-  color: #333;
-  background: #ff5533;
   border: none;
   border-radius: 1em;
   font-weight: 600;
@@ -107,13 +112,15 @@ footer { padding: 50px 0; }
 .place {
   padding-top: 300px;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ff5533+0,ff5533+100&amp;0+0,1+96 */
-  background: -moz-linear-gradient(top,  rgba(255,85,51,0) 0%, rgba(255,85,51,1) 300px, rgba(255,85,51,1) 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,85,51,0)), color-stop(300px,rgba(255,85,51,1)), color-stop(100%,rgba(255,85,51,1))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  rgba(255,85,51,0) 0%,rgba(255,85,51,1) 300px,rgba(255,85,51,1) 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  rgba(255,85,51,0) 0%,rgba(255,85,51,1) 300px,rgba(255,85,51,1) 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  rgba(255,85,51,0) 0%,rgba(255,85,51,1) 300px,rgba(255,85,51,1) 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  rgba(255,85,51,0) 0%,rgba(255,85,51,1) 300px,rgba(255,85,51,1) 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ff5533', endColorstr='#ff5533',GradientType=0 ); /* IE6-9 */
+}
+.gradient {
+  background: -moz-linear-gradient(top,  rgba(34,34,34,0) 0%, rgba(34,34,34,1) 400px, rgba(34,34,34,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(34,34,34,0)), color-stop(400px,rgba(34,34,34,1)), color-stop(100%,rgba(34,34,34,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(34,34,34,0) 0%,rgba(34,34,34,1) 400px,rgba(34,34,34,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(34,34,34,0) 0%,rgba(34,34,34,1) 400px,rgba(34,34,34,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(34,34,34,0) 0%,rgba(34,34,34,1) 400px,rgba(34,34,34,1) 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(34,34,34,0) 0%,rgba(34,34,34,1) 400px,rgba(34,34,34,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#222222', endColorstr='#222222',GradientType=0 ); /* IE6-9 */
 }
 
 .place > h2 {
@@ -157,7 +164,6 @@ footer { padding: 50px 0; }
 }
 .grid ul li img {
   width: 100%;
-  border: 2px solid #ff5533;
   border-radius: 50%;
 }
 
