--- a/joinsupport/main.css
+++ b/joinsupport/main.css
@@ -92,7 +92,7 @@ aside > .logo > img { width: 40px; }
 
 .berlin::before {
   z-index: -1;
-  background: url("heidelberg.jpg") no-repeat;
+  background: url("heidelberg.png") no-repeat;
   background-size: 100%;
   display: block;
   width: 100%;
@@ -111,16 +111,6 @@ footer { padding: 50px 0; }
 
 .place {
   padding-top: 300px;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ff5533+0,ff5533+100&amp;0+0,1+96 */
-}
-.gradient {
-  background: -moz-linear-gradient(top,  rgba(34,34,34,0) 0%, rgba(34,34,34,1) 400px, rgba(34,34,34,1) 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(34,34,34,0)), color-stop(400px,rgba(34,34,34,1)), color-stop(100%,rgba(34,34,34,1))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  rgba(34,34,34,0) 0%,rgba(34,34,34,1) 400px,rgba(34,34,34,1) 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  rgba(34,34,34,0) 0%,rgba(34,34,34,1) 400px,rgba(34,34,34,1) 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  rgba(34,34,34,0) 0%,rgba(34,34,34,1) 400px,rgba(34,34,34,1) 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  rgba(34,34,34,0) 0%,rgba(34,34,34,1) 400px,rgba(34,34,34,1) 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#222222', endColorstr='#222222',GradientType=0 ); /* IE6-9 */
 }
 
 .place > h2 {
