--- a/joinsupport/main.css
+++ b/joinsupport/main.css
@@ -105,7 +105,7 @@ aside > .logo > img { width: 40px; }
 
 footer { padding: 50px 0; }
 .nav { list-style-type: none; text-align: center; padding-left: 0; }
-.nav li { display: inline-block; }
+.nav li { display: inline-block; padding-top: 2em; }
 .nav a { text-decoration: none; text-transform: uppercase; padding: 10px 0; margin: 0 5px; }
 .nav a:hover { border-bottom: 6px solid #FF5533; }
 
