--- a/enchanted/main.css
+++ b/enchanted/main.css
@@ -1,6 +1,12 @@
-.number, i { color: #ff5533; }
-body, a { color: #333333; }
-body { 
+.number,
+i {
+  color: #ff5533;
+}
+body,
+a {
+  color: #333333;
+}
+body {
   font-family: "open sans", sans-serif;
   max-width: 646px;
 }
@@ -10,7 +16,8 @@ body {
   padding: 0px 40px;
 }
 
-h1, h2 {
+h1,
+h2 {
   margin: 50pt 0 20pt 0;
   text-align: center;
 }
@@ -26,26 +33,56 @@ p {
   font-size: 17pt;
   margin-bottom: 0;
 }
-.logo img { max-width: 30%; }
-.logo span { display: block; }
+.logo img {
+  max-width: 30%;
+}
+.logo span {
+  display: block;
+}
 .logo {
   margin-bottom: 40px;
   font-size: 52pt;
-  font-family: 'Pacifico', cursive;
+  font-family: "Pacifico", cursive;
 }
-.logo.no-text { font-size: 0; line-height: 0; }
-.logo.no-img img { display: none; }
+.logo.no-text {
+  font-size: 0;
+  line-height: 0;
+}
+.logo.no-img img {
+  display: none;
+}
 
-.show ul { padding: 0; margin: 0; }
-.show ul > li { display: inline-block; margin: 10px 0; }
-.show ul > li > img { max-width: 100%; height: auto; }
+.show ul {
+  padding: 0;
+  margin: 0;
+}
+.show ul > li {
+  display: inline-block;
+  margin: 10px 0;
+}
+.show ul > li > img {
+  max-width: 100%;
+  height: auto;
+}
 
-.show ul > li > img { max-width: 100%; height: auto; }
+.show ul > li > img {
+  max-width: 100%;
+  height: auto;
+}
 
-.faq dl { font-size: 17pt; }
-.faq dt { margin: 40px 0 0 40px; }
-.faq dt::before { content: "Q: "; font-weight: bold; }
-.faq dd { margin: 20px 0 0 40px; }
+.faq dl {
+  font-size: 17pt;
+}
+.faq dt {
+  margin: 40px 0 0 40px;
+}
+.faq dt::before {
+  content: "Q: ";
+  font-weight: bold;
+}
+.faq dd {
+  margin: 20px 0 0 40px;
+}
 
 .disclaimer {
   margin: 0;
@@ -57,27 +94,54 @@ footer {
   max-width: 646px;
   margin: 50pt auto;
 }
-footer p { font-size: 15pt; }
-footer .nav { padding-left: 0; }
-footer .nav li { display: inline-block; }
-footer .nav li:not(:first-child)::before { content: "| " }
+footer p {
+  font-size: 15pt;
+}
+footer .nav {
+  padding-left: 0;
+}
+footer .nav li {
+  display: inline-block;
+}
+footer .nav li:not(:first-child)::before {
+  content: "| ";
+}
 
 /*  responsiveness */
-@media(min-width: 646px) {
+@media (min-width: 646px) {
   /* show screenshots on larger screens */
-  .show { display: block; text-align: center; }
-  .show > ul { font-size: 0; line-height: 0; }
+  .show {
+    display: block;
+    text-align: center;
+  }
+  .show > ul {
+    font-size: 0;
+    line-height: 0;
+  }
   img {
     width: 280px;
     margin: 0 10px;
   }
 }
-@media(max-width: 645px) {
-  body { max-width: 300px; }
+@media (max-width: 645px) {
+  body {
+    max-width: 300px;
+  }
   /* hide everything but the first screenshot on smaller screens */
-  .logo { font-size: 2em; }
-  .show > ul > li:not(:first-child) { display: none; }
-  .faq dt, .faq dd { margin-left: 0; }
-  footer .nav li { display: block; }
-  footer .nav li:not(:first-child)::before { content: "" }
+  .logo {
+    font-size: 2em;
+  }
+  .show > ul > li:not(:first-child) {
+    display: none;
+  }
+  .faq dt,
+  .faq dd {
+    margin-left: 0;
+  }
+  footer .nav li {
+    display: block;
+  }
+  footer .nav li:not(:first-child)::before {
+    content: "";
+  }
 }
