--- a/joinsupport/main.css
+++ b/joinsupport/main.css
@@ -1,24 +1,45 @@
-i.fa, main h1, main h2 { color: #ff5533; }
+i.fa,
+main h1,
+main h2 {
+  color: #ff5533;
+}
 
-.download a, .download i, .single input.inset, .single button {
+.download a,
+.download i,
+.single input.inset,
+.single button {
   color: #333;
   background: #ff5533;
 }
-.download a, .single input.inset, .single button {
+.download a,
+.single input.inset,
+.single button {
   border-radius: 1em;
   border: none;
   font-weight: 600;
 }
 
-.place h2, main, main a { color: #ddd; }
-main { background: #222; }
-main section a, main section h2, main section dl, main section p { width: 560px; margin: auto;}
+.place h2,
+main,
+main a {
+  color: #ddd;
+}
+main {
+  background: #222;
+}
+main section a,
+main section h2,
+main section dl,
+main section p {
+  width: 560px;
+  margin: auto;
+}
 
 .download.large {
   font-size: 1em;
 }
-body { 
-  font-family:  "Raleway", "open-sans", sans-serif;
+body {
+  font-family: "Raleway", "open-sans", sans-serif;
   min-width: 200px;
 }
 
@@ -26,11 +47,14 @@ aside {
   width: 50%;
   position: fixed;
   height: 100%;
-  background: #EEE;
+  background: #eee;
   min-height: 100vh;
 }
 
-aside a { color: #333; font-weight: 600; }
+aside a {
+  color: #333;
+  font-weight: 600;
+}
 
 main {
   font-size: 1.2em;
@@ -70,7 +94,7 @@ aside > h2 {
 .single {
   border: 1px solid #333;
   display: inline-block;
-  margin: 50px 0 0 0 ;
+  margin: 50px 0 0 0;
   border-radius: 1.3em;
   padding: 0.1em 0.2em;
 }
@@ -88,11 +112,14 @@ aside > h2 {
 .single input.text {
   width: auto;
 }
-.single input.inset, .single button {
+.single input.inset,
+.single button {
   font-weight: 600;
 }
 
-aside > .logo > img { width: 40px; }
+aside > .logo > img {
+  width: 40px;
+}
 
 .berlin::before {
   z-index: -1;
@@ -107,11 +134,27 @@ aside > .logo > img { width: 40px; }
   left: 0;
 }
 
-footer { padding: 50px 0; }
-.nav { list-style-type: none; text-align: center; padding-left: 0; }
-.nav li { display: inline-block; padding-top: 2em; }
-.nav a { text-decoration: none; text-transform: uppercase; padding: 10px 0; margin: 0 5px; }
-.nav a:hover { border-bottom: 6px solid #FF5533; }
+footer {
+  padding: 50px 0;
+}
+.nav {
+  list-style-type: none;
+  text-align: center;
+  padding-left: 0;
+}
+.nav li {
+  display: inline-block;
+  padding-top: 2em;
+}
+.nav a {
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 10px 0;
+  margin: 0 5px;
+}
+.nav a:hover {
+  border-bottom: 6px solid #ff5533;
+}
 
 .place {
   padding-top: 300px;
@@ -129,21 +172,33 @@ footer { padding: 50px 0; }
   width: 100%;
   text-align: center;
 }
-.iphone img { }
+.iphone img {
+}
 
-.faq dt { font-weight: bold; padding-top: 1em; }
-.faq dd { padding-top: 0.25em; margin: 0; }
+.faq dt {
+  font-weight: bold;
+  padding-top: 1em;
+}
+.faq dd {
+  padding-top: 0.25em;
+  margin: 0;
+}
 
-@media(max-width: 350px) {
-  .iphone img { width: 80%; } 
-  .single input { width: 100%; }
-  .single input.inset, .single button {
+@media (max-width: 350px) {
+  .iphone img {
+    width: 80%;
+  }
+  .single input {
+    width: 100%;
+  }
+  .single input.inset,
+  .single button {
     left: 0px;
     width: 100%;
   }
 }
 
-.grid ul { 
+.grid ul {
   list-style-type: none;
   padding-left: 0;
   padding: 0;
@@ -154,26 +209,49 @@ footer { padding: 50px 0; }
   display: inline-block;
   max-width: 150px;
   margin: 20px 20px;
-  overflow: 
+  overflow: ;
 }
 .grid ul li img {
   width: 100%;
   border-radius: 50%;
 }
 
-@media(max-width: 400px) {
-  form { padding: 0 20%; }
-  form div { padding: 0; margin: 0; }
-  form div input { margin-left: 0; }
-  form div input.text { padding: 0.2em 0; }
-  aside { min-height: 200px; }
-  .single { display: block; padding: 0.2em; }
-  .single input { text-align: center;}
-  .single input.text { width: 100%; }
-  .single input.inset { display: block; width: 100%; border-radius: 0 0 1em 1em;}
+@media (max-width: 400px) {
+  form {
+    padding: 0 20%;
+  }
+  form div {
+    padding: 0;
+    margin: 0;
+  }
+  form div input {
+    margin-left: 0;
+  }
+  form div input.text {
+    padding: 0.2em 0;
+  }
+  aside {
+    min-height: 200px;
+  }
+  .single {
+    display: block;
+    padding: 0.2em;
+  }
+  .single input {
+    text-align: center;
+  }
+  .single input.text {
+    width: 100%;
+  }
+  .single input.inset {
+    display: block;
+    width: 100%;
+    border-radius: 0 0 1em 1em;
+  }
 }
 
-.download, form { 
+.download,
+form {
   text-align: center;
 }
 .download a {
@@ -182,20 +260,35 @@ footer { padding: 50px 0; }
   padding: 1em;
 }
 
-@media(max-width: 1200px) {
-  .iphone img { width: 80%; } 
+@media (max-width: 1200px) {
+  .iphone img {
+    width: 80%;
+  }
 }
 
-@media(max-width: 1000px) {
-  aside, main { display: block; position: relative; width: 100%; }
-  .place { padding-top: 50px; }
-  .iphone img { width: 50%; } 
+@media (max-width: 1000px) {
+  aside,
+  main {
+    display: block;
+    position: relative;
+    width: 100%;
+  }
+  .place {
+    padding-top: 50px;
+  }
+  .iphone img {
+    width: 50%;
+  }
 }
 
-@media(max-width: 700px) {
-  .iphone img { width: 100%; }
+@media (max-width: 700px) {
+  .iphone img {
+    width: 100%;
+  }
 }
 
-@media(min-width: 600px) {
-  aside h2 { width: 350px; }
+@media (min-width: 600px) {
+  aside h2 {
+    width: 350px;
+  }
 }
