--- a/landingcorp/css/_template.scss
+++ b/landingcorp/css/_template.scss
@@ -61,10 +61,76 @@ body {
   }
 }
 
-
 // Slider Senction Style
 .slider_section {
-  img {
+  position: relative;
+
+  &::before {
+    position: absolute;
+    content: "";
+    background-image: url("./../images/slider_bg.png");
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 600px;
+  }
+  .info {
+    padding-top: 120px;
+
+    h3 {
+      color: $whiteColor;
+      font-size: 3.5rem;
+      font-weight: 700;
+      line-height: 4.25rem;
+    }
+    p {
+      color: $whiteColor;
+      margin: 25px 75px;
+      font-size: 18px;
+    }
+    .search_wrapper {
+      input {
+        width: 320px;
+        height: 55px;
+        border: 0;
+        padding: 5px 10px;
+        font-size: 13px;
+
+        &:focus {
+          border: 0;
+        }
+      }
+      button {
+        background-color: $greenColor;
+        border: 0;
+        height: 55px;
+        color: $whiteColor;
+        padding: 0 15px;
+        margin-left: -5px;
+
+        &:focus {
+          border: none;
+        }
+      }
+    }
+    .sales_team_link {
+      display: inline-block;
+      margin-top: 30px;
+      color: $whiteColor;
+      transition: all 0.5s ease-in-out;
+
+      svg {
+        color: $greenColor;
+        transform: translateX(0px);
+        transition: all 0.5s ease-in-out;
+      }
+
+      &:hover {
+        text-decoration: none;
+        svg {
+          transform: translateX(3px);
+        }
+      }
+    }
   }
 }
