--- a/landingcorp/css/_template.scss
+++ b/landingcorp/css/_template.scss
@@ -193,3 +193,19 @@ body {
     }
   }
 }
+
+// Trusted Section Style
+.trusted_logo {
+  background-color: $lightGrayColor;
+  padding: 30px 0 80px 0;
+
+  .logo_list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    .single_logo {
+      margin: 0 auto;
+    }
+  }
+}
